# CHANGES TO v0.3.11 #

 * Enhancements were made to import and export of CSVY to store attribute metadata as variable-level attributes (like imports from binary file formats).
 * `import()` gains a `which` argument that is used to select which file to return from within a compressed tar or zip archive.
 * Export to tar now tries to correct for bugs in `tar()` that are being fixed in base R via [PR#16716](https://bugs.r-project.org/bugzilla/show_bug.cgi?id=16716).

# CHANGES TO v0.3.10 #

 * Fixed a bug in `import()` (introduced in #62, 7a7480e5) that prevented import from clipboard. (h/t Kevin Wright)
 * `export()` returns a character string. (#82)

# CHANGES TO v0.3.9 #

 * The use of `import()` for SAS, Stata, and SPSS files has been streamlined. Regardless of whether the `haven = TRUE` argument is used, the data.frame returned by `import()` should now be (nearly) identical, with all attributes stored at the variable rather than data.frame level. This is a non-backwards compatible change. (#80)

# CHANGES TO v0.3.8 #

 * Fixed error in export to CSVY with a commented yaml header. (#81, h/t Andrew MacDonald)

# CHANGES TO v0.3.7 #

 * `export()` now allows automatic file compression as tar, gzip, or zip using the `file` argument (e.g., `export(iris, "iris.csv.zip")`).

# CHANGES TO v0.3.6 #

 * Expanded verbosity of `export()` for fixed-width format files and added a commented header containing column class and width information.
 * Exporting factors to fixed-width format now saves those values as integer rather than numeric.
 * Expanded test suite and separated tests into format-specific files. (#51)

# CHANGES TO v0.3.5 #

 * Export of CSVY files now includes commenting the yaml header by default. Import of CSVY accommodates this automatically. (#74)

# CHANGES TO v0.3.3 #

 * Export of CSVY files and metadata now supported by `export()`. (#73)