@@ -23,7 +23,7 @@ Imports:
     openxlsx, 
     readODS, 
     jsonlite, 
-    XML, 
+    xml2, 
     curl (>= 0.6), 
     data.table (>= 1.9.5), 
     readxl, 
