@@ -6,7 +6,7 @@ export(import)
 # utility functions to import
 importFrom(tools, file_ext)
 importFrom(stats, na.omit)
-importFrom(utils, installed.packages, untar, unzip, tar, zip)
+importFrom(utils, installed.packages, untar, unzip, tar, zip, type.convert)
 importFrom(urltools, url_parse)
 importFrom(yaml, yaml.load, as.yaml)
 importFrom(curl, curl_download, curl_fetch_memory, parse_headers)
@@ -22,8 +22,7 @@ importFrom(foreign, write.dbf, write.arff)
 importFrom(utils, read.table, read.csv, read.fwf, read.DIF, read.fortran)
 importFrom(utils, write.table, write.csv)
 importFrom(readODS, read.ods, getNrOfSheetsInODS)
-importFrom(XML, xmlParse, xmlToDataFrame)
-importFrom(XML, newXMLNode, xmlValue, "xmlValue<-", saveXML)
+importFrom(xml2, read_xml, as_list)
 importFrom(jsonlite, fromJSON, toJSON)
 importFrom(openxlsx, read.xlsx, write.xlsx)
 importFrom(readxl, read_excel)
