@@ -32,7 +32,7 @@ The output file can be to a compressed directory, simply by adding an appropriat
     \item Weka Attribute-Relation File Format (.arff), using \code{\link[foreign]{write.arff}}
     \item R syntax object (.R), using \code{\link[base]{dput}} (by default) or \code{\link[base]{dump}} (if \code{format = 'dump'}
     \item Excel (.xlsx), using \code{\link[openxlsx]{write.xlsx}}
-    \item XML (.xml), using a custom method to create an XML tree and write to disk using \code{\link[XML]{saveXML}}
+    \item XML (.xml), using a custom method to create a simple XML tree
     \item Clipboard export (on Windows and Mac OS), using \code{\link[utils]{write.table}} with \code{row.names = FALSE}
 }
 
